# launcher

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  helper.rs  macros.rs  main.rs
src/assets/: style.scss
src/components/buttons/: info.vue  success.vue
